Fix styles for image align enter and in group view. #1

--- a/web/themes/custom/oos/css/style.css
+++ b/web/themes/custom/oos/css/style.css
@@ -6438,6 +6438,12 @@ body.toolbar-loading {
     left: -10px; }
   .latest-news .views-field-body {
     margin: 10px 0; }
+  .latest-news .views-field-changed,
+  .latest-news .views-field-created {
+    margin: 5px 0 0; }
+    .latest-news .views-field-changed span,
+    .latest-news .views-field-created span {
+      font-style: italic; }
 
 .box-shadow {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
